[PRMT-1147] Updated res status to 202 to follow the JSON:API specifications. Our endpoint
